--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -40,3 +40,15 @@
     margin-right: 10px; /* ou la valeur que vous souhaitez */
 }
   
+
+.reply-wall{
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 300px;
+  background-color: white;
+  border-left: 1px solid #ccc;
+  padding: 20px;
+    
+}
