--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -1,5 +1,6 @@
 .texte-cliquable{
     cursor: pointer;
+    
 }
 
 .texte-cliquable:hover {
@@ -7,41 +8,44 @@
     cursor: pointer;
   }
 
-.Message{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    
+
+.Message {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 1700px;
+  font-family: 'Poppins',sans-serif;
+  font-size: 19px;
+  margin-left: 150px;
+  color : white
+  
 }
 
-.titre-et-bouton h3,
+.titre-et-bouton{
+  text-align: left;
+}
+
+.titre-et-bouton p,
 .titre-et-bouton button {
   display: inline-block;
   vertical-align: middle;
-}
-
-.titre-et-bouton button {
   margin-left: 10px; 
+ 
 }
 
-.boutons-like-dislike {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-.boutons-like-dislike > div {
-    margin-right: 10px; /* ou la valeur que vous souhaitez */
+.message-content{
+  text-align: center;
+  margin-top: 10px;
+  font-size: 20px;
+
 }
-
-
-
 .reply-wall{
   position: fixed;
   top: 0;
@@ -49,8 +53,29 @@
   height: 100%;
   overflow-y: scroll;
   width: 300px;
-  background-color: white;
+ 
   border-left: 1px solid #ccc;
   padding: 20px;
 }
 
+button {
+  background-color: rgb(194, 50, 120);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.boutons-like-dislike {
+  display: flex;
+  justify-content: space-between;
+  gap : 5px;
+}
+
+.show-reply {
+  text-align: center;
+}
+.show-reply button {
+  width: 150px; /* ou une autre valeur de votre choix */
+}
