--- a/client/src/css/TimeLine.css
+++ b/client/src/css/TimeLine.css
@@ -1,14 +1,19 @@
 /* css pour une timeline d'un réseau social */
 /* css for a timeline of a social network */
+
+body {
+  background-color: #232121;
+}
+
+
 .p{
-    
     font-size: 20px;
     font-weight: bold;
-    color: #000000;
     margin: 0px;
     padding: 0px;
     text-align: center;
     margin-bottom: 10px;
+    color: white;
 }
 
 .PageProfile {
@@ -17,6 +22,32 @@
     margin-bottom: 5px
   }
   
-  .nouveau-message {
-    margin-top: 10px; /* ou la valeur que vous souhaitez */
+
+
+  .nouveau-message{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins',sans-serif;
   }
+
+  .nouveau-message input {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    width: 70%;
+    font-family: 'Poppins',sans-serif;
+    background-color: #908f8f;
+    color: white;
+  }
+  
+.nouveau-message button {
+  margin: 5px;
+  font-family: 'Poppins',sans-serif;
+}
+
+  
