--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -24,7 +24,8 @@
   font-family: 'Poppins',sans-serif;
   font-size: 19px;
   margin-left: 150px;
-  color : white
+  color : white;
+  text-align : center;
   
 }
 
