--- a/client/src/css/TimeLine.css
+++ b/client/src/css/TimeLine.css
@@ -50,4 +50,34 @@ body {
   font-family: 'Poppins',sans-serif;
 }
 
-  
+
+.barre-recherche input {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    width: 40%;
+    font-family: 'Poppins',sans-serif;
+    background-color: #908f8f;
+    color: white;
+    text-align : center;
+    font-family: 'Poppins',sans-serif;
+    margin: 15px;
+}
+
+.barre-recherche {
+  margin: 25px;
+  text-align: center;
+  color : white;
+  font-family: 'Poppins',sans-serif;
+}
+
+.barre-recherche boutton {
+  cursor : pointer;
+  margin: 5px;
+  font-family: 'Poppins',sans-serif;
+  background-color: rgb(194, 50, 120);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
