--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -48,7 +48,7 @@
 
 }
 .reply-wall{
-  position: fixed;
+  /* position: fixed;
   top: 0;
   right: 0;
   height: 100%;
@@ -56,7 +56,7 @@
   width: 300px;
  
   border-left: 1px solid #ccc;
-  padding: 20px;
+  padding: 20px; */
 }
 
 button {
