--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -41,7 +41,7 @@
 }
 
 
-
+/*
 .reply-wall{
   position: fixed;
   top: 0;
@@ -53,4 +53,5 @@
   border-left: 1px solid #ccc;
   padding: 20px;
 }
+*/
 
