--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -85,16 +85,6 @@
     align-items: center;
 }
 
-.delete button {
-    background-color: #151728;
-    font-family: Poppins;
-    color: white;
-    border: 1px solid #5c5e6e;
-    border-radius: 5px;
-    padding: 0.5em 1em;
-    margin-left: 1rem;
-    cursor: pointer;
-}
 
 
 
@@ -110,6 +100,15 @@
     background-color: #5c5e6e;
     font-size: 1.1em;
     resize: none;
-    
-    
+}
+
+
+.nav  {
+    position : absolute;
+    padding: 1.5em 1em;
+    left : 0;    
+}
+
+.delete button {
+    margin-left : 1rem;
 }
