--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -278,3 +278,109 @@ width: 150px; /* ou une autre valeur de votre choix */
 .submit-comment:hover {
   background-color: gray;
 }
+
+
+.new-message-box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: grey;
+  border-radius: 10px;
+  width: 90vw;
+  max-width: 600px;
+  height: 40%;
+  max-height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  z-index: 1000;
+}
+.close-btn {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: none;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.7; /* définir une opacité supérieure à 0 */
+} 
+.close-btn ion-icon {
+  font-size: 40px;
+  color: black; 
+ 
+}
+
+.close-btn:hover {
+  background-color: #ffffff; /* ajouter une couleur de fond semi-transparente au survol */
+  opacity: 1; /* définir une opacité de 1 au survol */
+}
+
+.close-btn:active {
+  cursor: pointer;
+}
+
+
+.new-message-box textarea {
+  background-color: black;
+  height: 110px;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  padding: 10px;
+  flex-grow: 1;
+  width: 98%;
+  margin-right: 400px;
+}
+
+.new-message-box textarea:focus {
+  outline: none;
+}
+
+.new-message-box textarea::placeholder {
+  color: white;
+  opacity: 50%;
+}
+
+.blur-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.submit-button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #0069d9;
+}
+
+.submit-button:active {
+  background-color: #005cbf;
+}
