--- a/client/src/css/TimeLine.css
+++ b/client/src/css/TimeLine.css
@@ -52,24 +52,7 @@ body {
   margin: 1.875rem;
 }
 
-.barre-recherche {
-  margin: 2.5%;
-  text-align: center;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-}
 
-.barre-recherche button {
-  cursor: pointer;
-
-  margin: 0.313rem;
-  font-family: 'Poppins', sans-serif;
-  background-color: rgb(194, 50, 120);
-  color: white;
-  padding: 0.625rem;
-  border-radius: 0.313rem;
-  border: none;
-} 
 
 .timeline-title h1 {
   text-align: left;
@@ -81,7 +64,8 @@ body {
   position: relative;
   margin : auto;
   width : 100%; 
-  height: 150px;
+  height: 100px;
+  margin-bottom: 20px;
   border-radius: 5px;
   overflow: hidden;
 }
@@ -127,8 +111,76 @@ body {
   
   color: white;
   font-family: 'Poppins', sans-serif;
+  padding: 20px;
+  border-radius: 5px;
  
 }
+
+.nombre-utilisateurs,
+.nombre-messages {
+  margin-bottom: 10px;
+  padding-bottom: 2%;
+}
+
+.nombre-utilisateurs p,
+.nombre-messages p {
+  font-size: 20px;
+  margin: 0;
+}
+
+.nav {
+  display : flex;
+  posotion: relative;
+  align-items: center;
+  justify-content: space-between ;
+  background-image: url('Space.jpeg');
+  padding: 5px, 5px;
+  width: 100%;
+}
+.nav-left {
+  color: white;
+  font-family: Poppins, sans-serif;
+  font-weight: bolder;
+  font-size: 50px;
+
+}
+.nav-center {
+  display: flex;
+  align-items: center;
+}
+
+.barre-recherche {
+  position: relative;
+  display: flex;
+  align-items: center;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+ 
+}
+
+.barre-recherche input {
+  width: 170%;
+}
+
+.barre-recherche button {
+  cursor: pointer;
+  margin: 0.313rem;
+  margin-left: 0.5rem;
+  font-family: 'Poppins', sans-serif;
+  background-color: rgb(51, 51, 110);
+ 
+  color: white;
+  padding: 0.625rem;
+  border-radius: 0.313rem;
+  border: none;
+} 
+
+.nav-right {
+  position: relative;
+  right: 160px;
+
+}
+
 
 @media only screen and (max-width: 768px) {
   .nouveau-message {
