--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -10,7 +10,7 @@
     margin : auto;
     width : 100%; 
     height: 250px;
-    background-image: url('https://i.pinimg.com/originals/f5/28/b8/f528b8aba5444331781f6746174c963a.jpg');
+    /* background-image: url('https://i.pinimg.com/originals/f5/28/b8/f528b8aba5444331781f6746174c963a.jpg'); */
     background-size: cover;
     border-radius: 5px;
     overflow: hidden;
