--- a/client/src/css/TimeLine.css
+++ b/client/src/css/TimeLine.css
@@ -31,7 +31,7 @@ body {
 .nouveau-message button {
   margin: 0.313rem;
   font-family: 'Poppins', sans-serif;
-  background-color: rgb(194, 50, 120);
+  background-color: rgb(51, 51, 110);
   color: white;
   padding: 0.625rem;
   border-radius: 0.313rem;
@@ -104,7 +104,7 @@ body {
 
 .time-line-head li:hover, active {
   color : white;
-  border-bottom: 3px solid #a50da5e6;
+  border-bottom: 3px solid rgb(51, 51, 110);
 }
   
 .statistique {
