--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -21,10 +21,7 @@
     bottom: 0;
     width: 100%;
     height: 65px;
-    background-color: #151728;
-   
-    
-    
+    /* background-color: #151728; */
 }
 
 .profile {
@@ -54,25 +51,26 @@
 .container li {
     list-style: none;
     cursor: pointer;
-    color : #5c5e6e;
+    /* color : #5c5e6e; */
+    color: black;
     font-size: 1.1em;
     padding: 1.5em 1em;
 }
 
 .container li:hover, active {
-    color : white;
-    border-bottom: 3px solid rgb(51, 51, 110);
+   
+    border-bottom: 3px solid #1d4a83;
 }
 
 .name {
-    color : paleturquoise;
+    color : black;
     margin-left : 1.5em;
     font-size: 1.5em;
 }
 
 .content {
     position: relative;
-    color : white;
+    color : black;
     bottom: 10px;
 }
 
@@ -86,22 +84,69 @@
     align-items: center;
 }
 
+.bio-container_my_profil {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.bio-input {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+}
 
-
+.biographie {
+  margin-top: 2em;
+  color: black;
+  font-family: Poppins;
+}
 .bio {
     margin: 0 auto;
-    width: 70%;
-    height: 100px;
+    width: 650px;
+    height: 90px;
     border: 1px solid #5c5e6e;
     border-radius: 5px;
     padding: 1em;
-    color : white;
-    font-family: Poppins;
-    background-color: #5c5e6e;
+    color : black;
+    font-family: Poppins, sans-serif;
+    background-color: #efefef;
     font-size: 1.1em;
     resize: none;
 }
+
+.date {
+  margin-top: 2em;
+}
+
+.Bio form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Bio label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.Bio input[type="date"] {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
+
+.Bio button[type="submit"] {
+ 
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
 
 
 .nav  {
