--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -196,6 +196,8 @@
     cursor: pointer;
 }
 
+
+
 .navbar a:hover {
     text-decoration: underline;
   }
@@ -223,19 +225,23 @@
 .signin-form .wrapper {
     position: relative;
     z-index: 1;
-    width: 480px;
-    height: 620px;
+    width: 580px; /* Utilise 100% de la largeur de la page */
+    height: 820px;
     background: transparent;
     backdrop-filter: blur(20px);
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
-    margin-left: 800px;
-    margin-top: 15px;
-}
+    margin-left: auto;
+    margin-top: 100px;
+    margin-right: 20px;
+
+   
+  }
+  
 
 .signin-form h2 {
     font-size: 2em;
@@ -313,6 +319,10 @@
 .signin-form .login-link a {
     color: #fa709a;
     cursor: pointer;
+}
+
+.signin-form .login-link a:hover {
+    text-decoration: underline;
 }
 
 .signin-form p {
