--- a/client/src/css/Message.css
+++ b/client/src/css/Message.css
@@ -1,5 +1,6 @@
 .texte-cliquable{
   cursor: pointer;
+  margin-left: 10px;
   
 }
 
@@ -18,7 +19,6 @@
 
 .Message {
   position: relative;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,13 +27,16 @@
   height: auto;
   padding: 20px;
   /* border: 1px solid #ccc; */
-  border: 1px solid black;
+  border: 1px solid #1d4a83;
   border-radius: 10px;
   margin-bottom: 20px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 4px #1d4a83;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  color: black;
+  color: #1d4a83;
+  background-color: transparent;
+  backdrop-filter: blur(10px);
+  
   max-width: 700px; /* limite la largeur maximale du message */
   margin: 0 auto; /* centre le message horizontalement */
 }
@@ -62,7 +65,7 @@
 }
 
 button {
-  background-color: #151728;
+  background-color: #1d4a83;
   font-family: Poppins;
   font-size: 16px;
   color: white;
@@ -98,11 +101,6 @@ color: white;
 
 }
 
-
-
-
-
-
 button:hover {
   font-weight: bolder;
 }
@@ -120,7 +118,7 @@ button:hover {
 }
 
 .boutons-like-dislike button {
-  background-color: black;
+  background-color: #1d4a83;
   border: none;
   border-radius: 50%;
   color: white;
@@ -156,16 +154,17 @@ text-align: center;
 width: 150px; /* ou une autre valeur de votre choix */
 }
 
-.comment-input {
+/* .comment-input {
+  color : #1d4a83;
   position: relative;
   margin-top: 10px;
-}
-
+} */
+/* 
 .comment-input input {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: #1d4a83;
   border: none;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #1d4a83;
   font-size: 16px;
   padding: 5px;
   width: 100%;
@@ -183,7 +182,7 @@ width: 150px; /* ou une autre valeur de votre choix */
 .comment-input input::placeholder {
   color: white;
   opacity: 0.6;
-}
+} */
 
 
 
@@ -194,7 +193,7 @@ width: 150px; /* ou une autre valeur de votre choix */
 }
 
 .bouton-comment button {
-  background-color: black;
+  background-color: #1d4a83;
   border: none;
   border-radius: 50%;
   color: white;
@@ -237,7 +236,7 @@ width: 150px; /* ou une autre valeur de votre choix */
 }
 
 .bouton-addcomment button {
-  background-color: black;
+  background-color: #1d4a83;
   border: none;
   border-radius: 50%;
   color: white;
@@ -265,15 +264,9 @@ width: 150px; /* ou une autre valeur de votre choix */
 .bouton-addcomment button:hover {
   background-color: rgb(144, 5, 5);
 }
-.comment-input {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
 
-.comment-input button {
-  margin-left: 10px;
-}
+
+
 
 .submit-comment {
   margin-left: 10px;
@@ -281,7 +274,7 @@ width: 150px; /* ou une autre valeur de votre choix */
   height: 30px;
   border: none;
   border-radius: 10px;
-  background-color: black;
+  background-color: #1d4a83;
   color: white;
   cursor: pointer;
   font-size: 14px;
@@ -297,7 +290,7 @@ width: 150px; /* ou une autre valeur de votre choix */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: grey;
+  background-color: rgb(76, 162, 199);
   border-radius: 10px;
   width: 90vw;
   max-width: 600px;
@@ -342,9 +335,9 @@ width: 150px; /* ou une autre valeur de votre choix */
 
 
 .new-message-box textarea {
-  background-color: black;
+  background-color: #ccc;
   height: 110px;
-  color: white;
+  color: #1d4a83;
   border: none;
   border-radius: 10px;
   font-size: 1.2rem;
@@ -398,10 +391,6 @@ width: 150px; /* ou une autre valeur de votre choix */
 }
 
 
-.reply-box{
-  margin-right: 300px;
-  
-}
 
 .alert {
   padding: 10px;
@@ -413,4 +402,153 @@ width: 150px; /* ou une autre valeur de votre choix */
   background-color: #f2dede;
   color: #a94442;
   border: 1px solid #ebccd1;
+}
+
+.titre-et-bouton img {
+  width : 100px;
+  height : 100px;
+  border-radius: 50%;
+  
+  border: 3px solid #1d4a83;
+
+
+}
+
+
+
+
+
+
+.reply-box{
+  margin-right: 300px;
+  padding: 10px; /* Ajoute un espace entre le bord et le contenu */
+}
+.comment-input {
+  position: relative;
+  margin-top: 10px;
+}
+
+.comment-input input {
+  background-color: black;
+  color: white;
+  border: none;
+  border-bottom: 2px solid black;
+  font-size: 16px;
+  padding: 5px;
+  width: 100%;
+  border-radius: 10px;
+  margin-right: 100;
+
+}
+
+.comment-input input:focus {
+  outline: none;
+  border-color: white;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.comment-input input::placeholder {
+  color: white;
+  opacity: 0.6;
+}
+
+
+.reply-box{
+  margin-right: 300px;
+  padding: 10px; /* Ajoute un espace entre le bord et le contenu */
+}
+.comment-input {
+  position: relative;
+  margin-top: 10px;
+}
+
+.comment-input input {
+  background-color: white;
+  color: #1d4a83;
+  border: none;
+  border-bottom: 2px solid black;
+  font-size: 16px;
+  padding: 5px;
+  width: 100%;
+  border-radius: 10px;
+  margin-right: 100;
+
+}
+
+.comment-input input:focus {
+  outline: none;
+  border-color: white;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.comment-input input::placeholder {
+  color: white;
+  opacity: 0.6;
+}
+
+.reply-container {
+  width: 100%;
+  overflow: auto;
+}
+
+
+
+.button-replytoreply {
+  background-color: #2661ae;
+  border: none;
+  border-radius: 20px;
+  color: #ffffff;
+  font-size: 0.8rem;
+  padding: 5px 10px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.button-replytoreply:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+
+.show-replies-button {
+  font-size: 0.8rem;
+  border-radius: 20px;
+  background-color: #b0c6e3;
+  color: #0077ff;
+  border: none;
+}
+
+.show-replies-button:hover {
+  background-color: rgba(0, 119, 255, 0.2);
+  cursor: pointer;
+}
+
+.submit-comment {
+  background-color: #2661ae;
+  border-radius: 20px;
+  color: #ffffff;
+  font-size: 0.8rem;
+  padding: 5px 10px; /* réduire la valeur de padding horizontale */
+  transition: background-color 0.3s ease-in-out;
+  margin-left: 30px;
+}
+
+.submit-comment:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+
+.comment-input input,
+.comment-input button {
+  display: inline-block;
+  vertical-align: middle; /* Facultatif : aligne verticalement les éléments */
+}
+.comment-input {
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 10px; /* Espacement entre les colonnes, ajustez selon vos besoins */
+  align-items: center; /* Facultatif : aligne verticalement les éléments */
+}
+
+
+.user-link {
+  cursor: pointer;
 }
