--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -3,14 +3,13 @@
     margin: 0;
 }
 
-/* https://i.pinimg.com/originals/f5/28/b8/f528b8aba5444331781f6746174c963a.jpg */
+
 
 .container {
     position: relative;
     margin : auto;
     width : 100%; 
     height: 250px;
-    /* background-image: url('https://i.pinimg.com/originals/f5/28/b8/f528b8aba5444331781f6746174c963a.jpg'); */
     background-size: cover;
     border-radius: 5px;
     overflow: hidden;
@@ -21,7 +20,7 @@
     bottom: 0;
     width: 100%;
     height: 65px;
-    /* background-color: #151728; */
+   
 }
 
 .profile {
@@ -36,7 +35,7 @@
     width : 150px;
     height : 150px;
     border-radius: 50%;
-    border: 3px solid #151728;
+    border: 3px solid #1d4a83;
 }
 
 .container ul {
@@ -52,7 +51,7 @@
     list-style: none;
     cursor: pointer;
     /* color : #5c5e6e; */
-    color: black;
+    color: #1d4a83;
     font-size: 1.1em;
     padding: 1.5em 1em;
 }
@@ -63,14 +62,14 @@
 }
 
 .name {
-    color : black;
+    color : #1d4a83;
     margin-left : 1.5em;
     font-size: 1.5em;
 }
 
 .content {
     position: relative;
-    color : black;
+    color : #1d4a83;
     bottom: 10px;
 }
 
@@ -84,6 +83,14 @@
     align-items: center;
 }
 
+
+ .Bio {
+  font-family: 'Poppins', sans-serif;
+  
+}
+
+
+
 .bio-container_my_profil {
   display: flex;
   flex-direction: column;
@@ -96,23 +103,36 @@
   margin-top: 1em;
 }
 
-.biographie {
-  margin-top: 2em;
-  color: black;
-  font-family: Poppins;
+.bio-input button {
+  margin-left : 35%;
+  margin-top : 2%;
 }
+
+.info_autre_utilisateur{ 
+  font-family: Poppins;
+  font-size: 20px;
+  margin-top: 1%;
+  
+}
+
+.biographie {
+  font-family: Poppins;
+  font-size: 20px;
+  margin-top: 25px;
+}
+
 .bio {
-    margin: 0 auto;
-    width: 650px;
-    height: 90px;
-    border: 1px solid #5c5e6e;
-    border-radius: 5px;
-    padding: 1em;
-    color : black;
-    font-family: Poppins, sans-serif;
-    background-color: #efefef;
-    font-size: 1.1em;
-    resize: none;
+  margin: 0 auto;
+  width: 650px;
+  height: 90px;
+  border: 1px solid #5c5e6e;
+  border-radius: 5px;
+  padding: 1em;
+  color: black;
+  font-family: Poppins, sans-serif;
+  background-color: #efefef;
+  font-size: 1.1em;
+  resize: none;
 }
 
 .date {
@@ -123,6 +143,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1em;
 }
 
 .Bio label {
@@ -130,21 +151,80 @@
   margin-bottom: 0.5rem;
 }
 
-.Bio input[type="date"] {
+.Bio input[type="date"],
+.ville input {
+  width: 100%;
   padding: 0.5rem;
-  border-radius: 4px;
+  font-size: 1rem;
   border: 1px solid #ccc;
-  margin-bottom: 1rem;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #333;
+  font-family: 'Poppins', sans-serif;
+  appearance: none; /* Supprime l'apparence par défaut du navigateur */
+  cursor: pointer;
 }
 
 .Bio button[type="submit"] {
- 
   color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
+  background-color: #5c5e6e;
+}
+
+.ville,
+.status,
+.genre {
+  margin-top: 2em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.info_utilisateur {
+  font-family: Poppins;
+  font-size: 20px;
+  margin-top: 25px;
+  
+
+
+}
+
+select {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #333;
+  font-family: 'Poppins', sans-serif;
+  appearance: none; /* Supprime l'apparence par défaut du navigateur */
+  cursor: pointer;
+}
+
+select:focus {
+  outline: none;
+  border-color: #5c5e6e;
+  box-shadow: 0 0 0 2px rgba(92, 94, 110, 0.2);
+}
+
+/* Style pour la flèche du select */
+select::-ms-expand {
+  display: flex;
+}
+
+select::after {
+  content: '\25BC'; /* Code Unicode pour afficher une flèche vers le bas */
+  position: absolute;
+  top: 50%;
+  right: 0.75rem;
+  transform: translateY(-50%);
+  pointer-events: none;
+  color: #888;
 }
 
 
