--- a/client/src/css/TimeLine.css
+++ b/client/src/css/TimeLine.css
@@ -1,5 +1,5 @@
 body {
-  /* background-color: hsl(230, 18%, 93%); */
+
   background-image: url('g.gif');
 
   background-size: cover;
@@ -31,8 +31,8 @@ body {
   justify-content: center;
   height: 45px;
   width: 280px;
-  bottom: 20px; /* Position depuis le bas de la fenêtre */
-  left: 20px; /* Position depuis le côté gauche de la fenêtre */
+  bottom: 20px; 
+  left: 20px; 
   padding: 29px;
 }
 
@@ -65,14 +65,14 @@ body {
   width: 100%;
   font-family: 'Poppins', sans-serif;
   background-color: white;
-  color: black;
+  color: b;
   margin-bottom: 0.625rem;
 }
 
 .nouveau-message button {
   margin: 0.313rem;
   font-family: 'Poppins', sans-serif;
-  background-color: rgb(51, 51, 110);
+  background-color: #1d4a83;
   color: white;
   padding: 0.625rem;
   border-radius: 0.313rem;
@@ -109,6 +109,7 @@ body {
   margin-bottom: 20px;
   border-radius: 5px;
   overflow: hidden;
+
 }
 
 .time-line-head h1 {
@@ -126,18 +127,23 @@ body {
   position: relative;
   width: 100%;
   display: flex;
-  padding-left: 50px;
+  padding-left: 40px;
   height: 100%;	
-  margin: 0;
+
+  margin-top:-30px;
+
   
 }
 
 .time-line-head  li {
   list-style: none;
   cursor: pointer;
-  color: black;
-  font-size: 1.1em;
+  color: #1d4a83;
+  -webkit-text-stroke: 0.5px black;
+  font-size: 1.9em;
   padding: 1.5em 1em;
+
+  font-family: Popins, sans-serif;
 }
 
 
@@ -148,7 +154,7 @@ body {
   
 .statistique {
   
-  color: black;
+  color: #1d4a83;
   font-family: 'Poppins', sans-serif;
   padding: 20px;
   border-radius: 5px;
@@ -160,13 +166,16 @@ body {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 64%; /* Position verticale depuis le haut de la fenêtre */
-  right: 20px; /* Position horizontale depuis le côté droit de la fenêtre */
-  transform: translateY(-50%); /* Centre verticalement le bloc */
+  top: 64%; 
+  right: 20px; 
+  transform: translateY(-50%); 
   border-radius: 10px;
-  border: 1px solid black;
+  border: 1px solid #1d4a83;
+  color : #1d4a83;
   height: 69%;
   width: 30%;
+  background-color: transparent;
+  backdrop-filter: blur(10px);
 }
 
 .Actu h2 {
@@ -179,7 +188,6 @@ body {
 
 .Actu p {
   font-family: 'Poppins', sans-serif;
-  
   font-size: 18px;
 }
 
@@ -201,19 +209,22 @@ body {
   position: relative;
   align-items: center;
   justify-content: space-between ;
-  /* background-image: url('Space.jpeg'); */
+
   padding: 5px, 5px;
   width: 100%;
-  background-color: #2867B2;
+  
   
 }
 .nav-left {
-  color: white;
   font-family: Poppins, sans-serif;
   font-weight: bolder;
-  font-size: 50px;
-
+  font-size: 500%;
+  margin-left: 2%;
+  -webkit-text-stroke: 1px black;
+  color: white;
 }
+
+
 .nav-center {
   display: flex;
   align-items: center;
@@ -245,6 +256,7 @@ body {
   border-radius: 0.313rem;
   border: none;
 } 
+
 
 .nav-right {
   position: relative;
@@ -281,7 +293,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: grey;
+    background-color: transparent;
     border-radius: 10px;
     width: 90vw;
     max-width: 600px;
@@ -307,7 +319,7 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    opacity: 0.7; /* définir une opacité supérieure à 0 */
+    opacity: 0.7; 
   } 
   .close-btn ion-icon {
     font-size: 40px;
@@ -316,8 +328,8 @@ body {
   }
 
   .close-btn:hover {
-    background-color: #ffffff; /* ajouter une couleur de fond semi-transparente au survol */
-    opacity: 1; /* définir une opacité de 1 au survol */
+    background-color: #ffffff; 
+    opacity: 1; 
   }
   
   .close-btn:active {
@@ -326,7 +338,7 @@ body {
   
   
   .new-message-box textarea {
-    background-color: black;
+    background-color: transparent;
     height: 110px;
     color: white;
     border: none;
@@ -380,6 +392,5 @@ body {
     background-color: #005cbf;
   }
 
-  
 
 }
