--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -115,8 +115,11 @@
     text-decoration: underline;
 }
 
-
+.input-box input::placeholder {
+    color: white;
+  }
   
+
 .login-form .blob{
     position: absolute;
     width: 500px;
@@ -369,3 +372,13 @@
     cursor: pointer;
   }
 
+  
+
+  .avatar-lien {
+    color : blue;
+    font-family: Popins, sans-serif;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+
+  }
